# esp32s3-defmt-example

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
