[package]
name    = "defmt"
version = "0.1.0"
authors = ["Sergio Gasquez <sergio.gasquez@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32s3-hal", version = "0.12.0" }
esp-backtrace = { version = "0.8.0", default-features = false, features = [
    "esp32s3",
    "panic-handler",
    "exception-handler",
    "print-jtag-serial",
] }
esp-println = { git = "https://github.com/esp-rs/esp-println", default-features = false, features = [
    "esp32s3",
    "defmt",
    "jtag_serial"
] }
defmt = "=0.3.5"